syntax = "proto3";

option csharp_namespace = "Northwind.Infrastructure.Protos";

package IndexService;

service Indexer {
    rpc QuickSearch (QuickSearchRequest)
    returns (QuickSearchResponse);
}


message QuickSearchRequest {
    string IndexName = 1;
    string Query = 2;
    int32 Limit = 3;
}

message QuickSearchResponse {
    repeated string Result = 1;
}